tests/NormalTests/paczka1/small_fuzzy/26620580.err
Error in line 1: yIOie7vkjmS A895 53,4
Error in line 7: LyL0GZ S392 72,2
Error in line 6: odQqCRM6P A895 97,1
Error in line 15: odQqCRM6P A490 30,7
